# ObsidianPalace

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  entrypoint.sh  nginx.conf  pyproject.toml  supervisord.conf  sync-guard.sh  zensical.toml
.github/workflows/: ci.yml  deploy.yml  docs.yml
docs/: CNAME  index.md
docs/api/: app.md  config.md  index.md
docs/api/auth/: oauth.md
docs/api/mcp/: server.md  transport.md
docs/api/search/: searcher.md  watcher.md
docs/api/vault/: operations.md  placement.md
docs/architecture/: index.md
docs/deployment/: index.md
docs/infrastructure/: index.md
docs/mcp-tools/: index.md
docs/setup/: connection.md  deployment.md  index.md  troubleshooting.md
src/obsidian_palace/: __init__.py  app.py  config.py
src/obsidian_palace/auth/: __init__.py  mcp_oauth.py  oauth.py
src/obsidian_palace/mcp/: __init__.py  server.py  transport.py
src/obsidian_palace/search/: __init__.py  indexer.py  searcher.py  watcher.py
src/obsidian_palace/vault/: __init__.py  operations.py  placement.py
terraform/environments/prod/: backend.tf  main.tf  outputs.tf  variables.tf  versions.tf
terraform/modules/obsidian_palace/: apis.tf  compute.tf  dns.tf  network.tf  outputs.tf  registry.tf  secrets.tf  variables.tf
tests/: conftest.py
tests/unit/: test_app.py  test_auth.py  test_indexer.py  test_mcp_server.py  test_searcher.py  test_vault_operations.py  test_watcher.py
