[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "obsidian_palace"
description = "MCP server bridging Obsidian vaults with AI via semantic search and bidirectional sync."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Eli Winter" }]
dynamic = ["version"]
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic-settings",
  "httpx",
  "mcp[server]>=1.0",
  "mempalace",
  "watchfiles",
  "supervisor",
  "google-auth",
  "google-auth-httplib2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "ruff>=0.8",
  "pre-commit>=4.0",
]

[project.urls]
Repository = "https://github.com/TheWinterShadow/ObsidianPalace"

[tool.hatch.build.targets.wheel]
packages = ["src/obsidian_palace"]

[tool.hatch.version]
path = "src/obsidian_palace/__about__.py"

[tool.hatch.envs.default]
python = "3.12"
features = ["dev"]

[tool.hatch.envs.default.scripts]
test = "pytest"

[tool.hatch.envs.dev]
python = "3.12"
features = ["dev"]

[tool.hatch.envs.dev.scripts]
test = "pytest"
lint = "ruff check src tests"
fmt = "ruff format src tests"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["I", "E", "F", "B", "C4", "SIM", "UP", "ARG", "PTH"]
ignore = ["ARG001", "ARG002", "S101"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src/obsidian_palace"]
omit = ["*/__about__.py", "*/tests/*"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "def __repr__", "raise AssertionError"]
